--- a/environment.yml
+++ b/environment.yml
@@ -3,12 +3,12 @@ channels:
   - pytorch
   - conda-forge
 dependencies:
-  - fastprogress=1.0.3
   - h5py=3.7.0
   - pip=22.3.1
   - pre-commit=2.20.0
   - python=3.9
   - pytorch=1.12.1
+  - rich=12.6.0
   - torchaudio=0.12.1
   - pip:
     - -e .
